# mind-engine-lab

./: .streamlit_tmp_world.xlsx  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
examples/: config_example.yaml  observation_example.json  world_minimal.json
mind_engine_lab/: __init__.py  aggregators.py  app_streamlit.py  arbiter.py  cli.py  dsl.py  engine.py  models.py  obs_gen.py  world_import.py  yaml_io.py
source/: Object_Table_world_config_v0_4.xlsx
